fix overflow issue

--- a/src/components/MarkdownPreview/styles.module.css
+++ b/src/components/MarkdownPreview/styles.module.css
@@ -7,4 +7,5 @@
     padding-right: 12px;
     padding-left: 12px;
     overflow-wrap: break-word;
+    overflow-y: scroll;
 }
